--- a/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
+++ b/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:/application-context.xml</param-value>
+    <param-value>classpath:/web-application-context.xml</param-value>
   </context-param>
 
   <listener>
