--- a/migration-tool/pom.xml
+++ b/migration-tool/pom.xml
@@ -30,11 +30,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.batch.version>2.1.7.RELEASE</spring.batch.version>
     <spring.batch.admin.version>1.2.2.RELEASE</spring.batch.admin.version>
-    <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
+    <spring.framework.version>3.1.0.RELEASE</spring.framework.version>
     <spring.integration.version>2.0.3.RELEASE</spring.integration.version>
     <junit.version>4.10</junit.version>
     <mysql.connector.version>5.1.24</mysql.connector.version>
     <hsqldb.connector.version>1.8.0.7</hsqldb.connector.version>
+    <h2db.connector.version>1.3.174</h2db.connector.version>
   </properties>
 
   <dependencyManagement>
@@ -108,6 +109,12 @@
         <groupId>hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
         <version>${hsqldb.connector.version}</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2db.connector.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
