--- a/web/pom.xml
+++ b/web/pom.xml
@@ -183,6 +183,11 @@
               <war>${inera.certificates.basedir}/fk7263/target/fk7263.war</war>
               <contextPath>/fk7263</contextPath>
             </contextHandler>
+            <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+              <war>${inera.certificates.basedir}/ts-bas/target/ts-bas.war</war>
+              <contextPath>/ts-bas</contextPath>
+            </contextHandler>
+
           </contextHandlers>
           <systemProperties>
             <systemProperty>
