--- a/web/pom.xml
+++ b/web/pom.xml
@@ -168,7 +168,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.0.1.v20130408</version>
+        <version>9.1.1.v20140108</version>
         <configuration>
           <webAppConfig>
             <contextPath>/inera-certificate</contextPath>
@@ -205,6 +205,10 @@
             <systemProperty>
               <name>catalina.base</name>
               <value>${project.build.directory}/catalina.base</value>
+            </systemProperty>
+            <systemProperty>
+              <name>logback.configurationFile</name>
+              <value>${basedir}/logback.xml</value>
             </systemProperty>
           </systemProperties>
         </configuration>
