--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
+    <certificate.config.dir>${project.basedir}</certificate.config.dir>
     <inera.certificates.basedir>${project.basedir}/../../inera-certificate-modules</inera.certificates.basedir>
   </properties>
 
@@ -208,7 +209,7 @@
             </systemProperty>
             <systemProperty>
               <name>logback.configurationFile</name>
-              <value>${basedir}/logback.xml</value>
+              <value>${certificate.config.dir}/logback.xml</value>
             </systemProperty>
           </systemProperties>
         </configuration>
