--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
-    <version>1.1-RC4-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
 
   <artifactId>web</artifactId>
