--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
       <param-name>contextConfigLocation</param-name>
       <param-value>/WEB-INF/application-context.xml</param-value>
   </context-param>
+  <context-param>
+      <param-name>logbackConfigParameter</param-name>
+      <param-value>certificate.logback.file</param-value>
+  </context-param>
 
   <servlet>
     <servlet-name>cxf</servlet-name>
@@ -22,6 +26,10 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
+  <!-- Listener for external logback configuration file -->
+  <listener>
+      <listener-class>se.inera.certificate.logging.LogbackConfiguratorContextListener</listener-class>
+  </listener>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
