--- a/logback-util/pom.xml
+++ b/logback-util/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>se.inera.certificate</groupId>
-  <artifactId>logback-marker-filter</artifactId>
-  <version>1.0.0</version>
-  <name>LogBack Marker Filter</name>
+  <artifactId>logback-util</artifactId>
+  <version>1.1.0</version>
+  <name>LogBack Utilities</name>
 
   <scm>
-    <connection>scm:git:https://code.google.com/p/inera-certificate/logging-util</connection>
+    <connection>scm:git:https://code.google.com/p/inera-certificate/logback-util</connection>
   </scm>
   <distributionManagement>
     <repository>
@@ -21,12 +21,24 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <logback.version>1.0.11</logback.version>
+    <spring.version>3.2.2.RELEASE</spring.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
