INTYG-881: Som driftsansvarig vill jag att applikationen kräver en konfigurationsfil. * Refaktorerat default-properties * Tagit bort default-fil för qa. * Tagit bort override.<env>.properties, då dessa inte används.

--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -1,8 +1,6 @@
 registermedicalcertificatev3.endpoint.url=http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certificate/send-certificate-question-stub
 
-modules.port=8080
-
 certificatesender.address.fk7263 = FK
 revokecertificate.address.fk7263 = FK
 
@@ -15,6 +13,5 @@ ws.truststore.file = /home/intygadmin/.test.minaintyg.se/truststore.jks
 ws.truststore.password = password
 ws.truststore.type = JKS
 
-store.original.certificate = true
-
+# Override to disable sending JMS messages to statistik-tjänsten, since we don't have JMS connectivity in this env
 statistics.enabled = false
