--- a/web/pom.xml
+++ b/web/pom.xml
@@ -179,6 +179,7 @@
           <webAppConfig>
             <contextPath>/inera-certificate</contextPath>
           </webAppConfig>
+          <jettyXml>${basedir}/src/main/webapp/WEB-INF/jetty.xml</jettyXml>
           <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
           <contextHandlers>
             <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
