INTYG-951: Separera credentials från övrig konfiguration

--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -1,17 +1,21 @@
+# NTjP SSL config
+ntjp.ws.certificate.file =
+ntjp.ws.certificate.type = PKCS12
+ntjp.ws.certificate.password =
+ntjp.ws.key.manager.password =
+
+ntjp.ws.truststore.file =
+ntjp.ws.truststore.type = JKS
+ntjp.ws.truststore.password =
+
+# Endpoints for communicating with FK
 registermedicalcertificatev3.endpoint.url=http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certificate/send-certificate-question-stub
 
+# Logical address for FK
 certificatesender.address.fk7263 = FK
 revokecertificate.address.fk7263 = FK
 
-ws.key.manager.password = 
-ws.certificate.file = /home/intygadmin/.test.minaintyg.se/qa.eintyg.inera.sjunet.org_sign.p12
-ws.certificate.password = 
-ws.certificate.type = PKCS12
-
-ws.truststore.file = /home/intygadmin/.test.minaintyg.se/truststore.jks
-ws.truststore.password = password
-ws.truststore.type = JKS
 
 # Override to disable sending JMS messages to statistik-tjänsten, since we don't have JMS connectivity in this env
 statistics.enabled = false
