--- a/web/pom.xml
+++ b/web/pom.xml
@@ -213,6 +213,10 @@
               <value>${project.build.directory}/catalina.base</value>
             </systemProperty>
             <systemProperty>
+              <name>credentials.file</name>
+              <value>${project.basedir}/credentials.properties</value>
+            </systemProperty>
+            <systemProperty>
               <name>certificate.config.file</name>
               <value>${project.basedir}/config.properties</value>
             </systemProperty>
