--- a/logback-util/pom.xml
+++ b/logback-util/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>se.inera.certificate</groupId>
   <artifactId>logback-util</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1</version>
   <name>LogBack Utilities</name>
 
   <scm>
@@ -39,6 +39,18 @@
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.9</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
