--- a/migration-tool/mc2wc/mc2wc-batch/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-batch/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>mc2wc-batch</artifactId>
+  <packaging>war</packaging>
   <dependencies>
     <dependency>
       <groupId>se.inera.certificate.migration.mc2wc</groupId>
@@ -33,8 +34,26 @@
       <artifactId>spring-tx</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
@@ -54,6 +73,11 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -93,12 +117,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.3.174</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
       <version>2.4.9</version>
@@ -132,5 +150,23 @@
       <version>${cxf.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.edugility</groupId>
+        <artifactId>h2-maven-plugin</artifactId>
+        <version>1.0</version>
+        <configuration>
+          <port>9092</port>
+          <allowOthers>true</allowOthers>
+          <baseDirectory>${project.basedir}/h2</baseDirectory>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
