--- a/migration-tool/mc2wc/mc2wc-receiver/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-receiver/pom.xml
@@ -71,6 +71,16 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
