--- a/migration-tool/mc2wc/mc2wc-receiver/src/main/webapp/WEB-INF/web.xml
+++ b/migration-tool/mc2wc/mc2wc-receiver/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
 
   <display-name>WC2MC Receiver App</display-name>
 
@@ -8,6 +10,15 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:/application-context.xml</param-value>
   </context-param>
+
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <servlet-name>CXFServlet</servlet-name>
+  </filter-mapping>
 
   <listener>
     <listener-class>
@@ -26,5 +37,5 @@
     <servlet-name>CXFServlet</servlet-name>
     <url-pattern>/services/*</url-pattern>
   </servlet-mapping>
-  
+
 </web-app>
