--- a/migration-tool/mc2wc/mc2wc-common/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-common/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>se.inera.certificate.migration.mc2wc</groupId>
@@ -12,7 +12,7 @@
       <resource>
         <directory>${project.basedir}/src/main/resources</directory>
       </resource>
-      <resource>  
+      <resource>
         <directory>${project.build.directory}/generated-sources/jaxb</directory>
       </resource>
     </resources>
