--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.inera.certificate</groupId>
   <artifactId>certificate</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2-RC1</version>
   <packaging>pom</packaging>
   <name>Inera Certificate</name>
   <description>
@@ -12,7 +11,7 @@
   </description>
   <scm>
     <connection>scm:git:https://code.google.com/p/inera-certificate/</connection>
-    <tag>HEAD</tag>
+    <tag>certificate-1.2-RC1</tag>
   </scm>
   <distributionManagement>
     <repository>
@@ -371,7 +370,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
