Changed module-api to use the new module format.
- Reworked the module-api factory class to use direct java invocations
  instead of REST.
- Updated intygstjansten to use the new module-api

--- a/module-api/pom.xml
+++ b/module-api/pom.xml
@@ -19,31 +19,15 @@
   </description>
 
   <dependencies>
-
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>model</artifactId>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>module-support</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>schemas</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-transports-http</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
-    </dependency>
-
   </dependencies>
 
 </project>
