--- a/web/pom.xml
+++ b/web/pom.xml
@@ -20,6 +20,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>ts-bas</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-transports-http</artifactId>
     </dependency>
@@ -180,21 +186,6 @@
             <contextPath>/inera-certificate</contextPath>
           </webAppConfig>
           <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
-          <contextHandlers>
-            <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-              <war>${inera.certificates.basedir}/rli/target/rli.war</war>
-              <contextPath>/rli</contextPath>
-            </contextHandler>
-            <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-              <war>${inera.certificates.basedir}/fk7263/target/fk7263.war</war>
-              <contextPath>/fk7263</contextPath>
-            </contextHandler>
-            <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-              <war>${inera.certificates.basedir}/ts-bas/target/ts-bas.war</war>
-              <contextPath>/ts-bas</contextPath>
-            </contextHandler>
-
-          </contextHandlers>
           <systemProperties>
             <systemProperty>
               <name>spring.profiles.active</name>
