Added fk7263 and ts-diabetes to IT.
Also fixed some bugs that showed up when running Fitnesse.

--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-kahadb-store</artifactId>
+        <version>${activemq.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
