--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,7 +21,19 @@
 
     <dependency>
       <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>fk7263</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
       <artifactId>ts-bas</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>ts-diabetes</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
@@ -126,6 +138,11 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-kahadb-store</artifactId>
     </dependency>
 
     <dependency>
