--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
-    <version>1.2-RC2-SNAPSHOT</version>
+    <version>1.2-RC2</version>
   </parent>
 
   <artifactId>web</artifactId>
@@ -193,7 +193,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
