--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -37,8 +37,8 @@
     </dependency>
 
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>model</artifactId>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>module-support</artifactId>
     </dependency>
 
     <dependency>
