--- a/web/pom.xml
+++ b/web/pom.xml
@@ -52,8 +52,8 @@
       <artifactId>schemas</artifactId>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>model</artifactId>
+      <groupId>se.inera.certificate.modules</groupId>
+      <artifactId>module-support</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
