--- a/migration-tool/pom.xml
+++ b/migration-tool/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.inera.certificate.migration</groupId>
   <artifactId>migration-tool-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
   <name>Inera Certificate Migration Tool parent POM</name>
   <description>
