--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
   </distributionManagement>
 
   <modules>
-    <module>integration-util</module>
     <module>schemas</module>
     <module>module-api</module>
     <module>web</module>
@@ -68,7 +67,7 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>se.inera.certificate.modules</groupId>
         <artifactId>integration-util</artifactId>
         <version>${project.version}</version>
       </dependency>
