--- a/web/pom.xml
+++ b/web/pom.xml
@@ -137,16 +137,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-client</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-kahadb-store</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
     </dependency>
@@ -194,79 +184,98 @@
         </excludes>
       </resource>
     </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.1.1.v20140108</version>
-        <configuration>
-          <webAppConfig>
-            <contextPath>/inera-certificate</contextPath>
-          </webAppConfig>
-          <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
-          <systemProperties>
-            <systemProperty>
-              <name>spring.profiles.active</name>
-              <value>${system.mode}</value>
-            </systemProperty>
-            <systemProperty>
-              <name>jetty.port</name>
-              <value>8080</value>
-            </systemProperty>
-            <systemProperty>
-              <name>java.awt.headless</name>
-              <value>true</value>
-            </systemProperty>
-            <systemProperty>
-              <name>catalina.base</name>
-              <value>${project.build.directory}/catalina.base</value>
-            </systemProperty>
-            <systemProperty>
-              <name>credentials.file</name>
-              <value>${project.basedir}/credentials.properties</value>
-            </systemProperty>
-            <systemProperty>
-              <name>certificate.config.file</name>
-              <value>${project.basedir}/config.properties</value>
-            </systemProperty>
-            <systemProperty>
-              <name>certificate.logback.file</name>
-              <value>${project.basedir}/certificate-logback.xml</value>
-            </systemProperty>
-            <systemProperty>
-              <name>fk7263.logback.file</name>
-              <value>classpath:fk7263-logback.xml</value>
-            </systemProperty>
-          </systemProperties>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.171</version>
-          </dependency>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.24</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-            <version>5.8.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-kahadb-store</artifactId>
-            <version>5.8.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jms_1.1_spec</artifactId>
-            <version>1.1.1</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>jetty</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>9.1.1.v20140108</version>
+            <configuration>
+              <webAppConfig>
+                <contextPath>/inera-certificate</contextPath>
+              </webAppConfig>
+              <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
+              <systemProperties>
+                <systemProperty>
+                  <name>spring.profiles.active</name>
+                  <value>${system.mode}</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>8080</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>java.awt.headless</name>
+                  <value>true</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>catalina.base</name>
+                  <value>${project.build.directory}/catalina.base</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>credentials.file</name>
+                  <value>${project.basedir}/credentials.properties</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>certificate.config.file</name>
+                  <value>${project.basedir}/config.properties</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>certificate.logback.file</name>
+                  <value>${project.basedir}/certificate-logback.xml</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>fk7263.logback.file</name>
+                  <value>classpath:fk7263-logback.xml</value>
+                </systemProperty>
+              </systemProperties>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.3.171</version>
+              </dependency>
+              <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.24</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-broker</artifactId>
+                <version>${activemq.version}</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-kahadb-store</artifactId>
+                <version>${activemq.version}</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-jms_1.1_spec</artifactId>
+                <version>1.1.1</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-client</artifactId>
+          <version>${activemq.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-broker</artifactId>
+          <version>${activemq.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
