--- a/web/pom.xml
+++ b/web/pom.xml
@@ -117,11 +117,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-client</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
     </dependency>
@@ -297,12 +292,12 @@
               <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-broker</artifactId>
-                <version>5.8.0</version>
+                <version>${activemq.version}</version>
               </dependency>
               <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-kahadb-store</artifactId>
-                <version>5.8.0</version>
+                <version>${activemq.version}</version>
               </dependency>
               <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
@@ -313,6 +308,18 @@
           </plugin>
         </plugins>
       </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-client</artifactId>
+          <version>${activemq.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-broker</artifactId>
+          <version>${activemq.version}</version>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 </project>
