INTYG-1073: Fält 9 (arbetsförmåga-motivering) försvinner om prognos-angivelse saknas. Lagt till FitNesse-tester för att säkerställa att GetCertificate ger samma intyg tillbaka som skickas in via RegisterCertificate.
(cherry picked from commit 6a25fbc12fabedbba75df2aed31f7b5a930c4097)
Signed-off-by: Bjorn Beskow <bb@callistaenterprise.se>

--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -85,6 +85,12 @@
     </dependency>
 
     <dependency>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
+      <scope>compile</scope>
+    </dependency>
+            
+    <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
       <version>5.8.0</version>
@@ -124,6 +130,7 @@
                  <exclude>${fitnesse.root}/FrontPage/**</exclude>
                  <exclude>${fitnesse.root}/PageFooter/**</exclude>
                  <exclude>${fitnesse.root}/files/validering/**</exclude>
+                 <exclude>${fitnesse.root}/files/transformering/**</exclude>
                  <exclude>plugins.properties</exclude>
                  <exclude>**/.gitignore</exclude>
                </excludes>
