WEBCERT-593: Refaktorerat verktyget för att söka ut och konvertera om data relaterat till "Fält 9"-buggen.

--- a/migration-tool/mc2wc/pom.xml
+++ b/migration-tool/mc2wc/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.inera.certificate.migration</groupId>
     <artifactId>migration-tool-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <modules>
     <module>mc2wc-common</module>
