--- a/migration-tool/migration-web/src/test/resources/migration-tool-dev.properties
+++ b/migration-tool/migration-web/src/test/resources/migration-tool-dev.properties
@@ -4,7 +4,9 @@ certificate.writer.sql=UPDATE CERTIFICATE SET DOCUMENT = ? WHERE id = ?
 # Info model migration job database reader SQL statements
 certificate.reader.sql.select=SELECT ID, RECEIVED, DOCUMENT, CERTIFICATE_ID
 certificate.reader.sql.from=FROM ORIGINAL_CERTIFICATE
-certificate.reader.sql.where=DOCUMENT LIKE '%<motivering>%' AND DOCUMENT NOT LIKE '%<prognosangivelse>%'
+# The WHERE condition is left out since it is incompatible with how H2 works
+#certificate.reader.sql.where=DOCUMENT LIKE '%<motivering>%' AND DOCUMENT NOT LIKE '%<prognosangivelse>%'
+certificate.reader.sql.where=
 certificate.reader.sortkey=ID
 
 # CheckCertificateExistsProcessor SQL statement
