INTYG-958 Ny stubbe for att skicka intyg.
Intyg ska ny aven kunna skickas via clinical process-tjanste.

--- a/web/src/main/resources/default.dev.properties
+++ b/web/src/main/resources/default.dev.properties
@@ -1,4 +1,5 @@
-registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
+registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-medical-certificate-stub
+registercertificatev1.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url = http://localhost:8080/inera-certificate/send-certificate-question-stub
 
 revokecertificate.address.fk7263 = FK
