--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -9,7 +9,8 @@ ntjp.ws.truststore.type = JKS
 ntjp.ws.truststore.password =
 
 # Endpoints for communicating with FK
-registermedicalcertificatev3.endpoint.url=http://localhost:8080/inera-certificate/register-certificate-stub
+registermedicalcertificatev3.endpoint.url = http://localhost:8080/inera-certificate/register-medical-certificate-stub
+registercertificatev1.endpoint.url = http://localhost:8080/inera-certificate/register-certificate-stub
 sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certificate/send-certificate-question-stub
 
 # Logical address for FK
