Inera-certificate fixad enlight checkstyle (en handfull fel återstår som skulle kunna vara acceptabla)

--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -16,5 +16,5 @@ sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certif
 revokecertificate.address.fk7263 = FK
 
 
-# Override to disable sending JMS messages to statistik-tjänsten, since we don't have JMS connectivity in this env
+# Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env
 statistics.enabled = false
