--- a/integration-util/pom.xml
+++ b/integration-util/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
-    <version>1.2-RC3</version>
+    <version>1.2-RC4-SNAPSHOT</version>
   </parent>
 
   <artifactId>integration-util</artifactId>
