Skapade separat logback config for dev.
Forbattrade aven loggningen i IntygBootstrapBean.

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -226,7 +226,7 @@
                 </systemProperty>
                 <systemProperty>
                   <name>certificate.logback.file</name>
-                  <value>${project.basedir}/certificate-logback.xml</value>
+                  <value>${project.basedir}/certificate-logback-dev.xml</value>
                 </systemProperty>
                 <systemProperty>
                   <name>fk7263.logback.file</name>
