--- a/module-api/pom.xml
+++ b/module-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
-    <version>1.1.5-SNAPSHOT</version>
+    <version>1.1.4</version>
   </parent>
 
   <artifactId>module-api</artifactId>
