--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.inera.certificate</groupId>
   <artifactId>certificate</artifactId>
-  <version>1.1.5-SNAPSHOT</version>
+  <version>1.1.4</version>
   <packaging>pom</packaging>
   <name>Inera Certificate</name>
   <description>
@@ -11,7 +11,7 @@
   </description>
   <scm>
     <connection>scm:git:https://code.google.com/p/inera-certificate/</connection>
-    <tag>certificate-1.1-RB</tag>
+    <tag>certificate-1.1.4</tag>
   </scm>
   <distributionManagement>
     <repository>
