--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -1,9 +1,27 @@
+#This file is used for bootstrapping Recipient[s] and configuring names and addresses to these. 
+
+# Lines with the prefix: recipient are used to create Recipient objects
+# It is made up of the following parts: 
+# recipient.[ID].[name] = xxx
+# recipient.[ID].[logicalAddress] = xxx
+# [ID] is the Id of the Receiver object (at this point a non-existing Receiver object)
+# [name] is the pretty print name for this recipient
+# [logicalAddress] is the address that is to be used for sending certificates 
+
 # Defines the recipient FK (Försäkringskassan)
 recipient.fk.name = Försäkringskassan
 recipient.fk.logicalAddress = FK
 # Defines the recipient TS (Transportstyrelsen)
 recipient.ts.name = Transportstyrelsen
 recipient.ts.logicalAddress = TS
+
+# Lines with the prefix: recipient-transport-model-version are used to indicate which transportmodel-version a
+# certain Recipient supports for a give certificate.  
+# It is made up of the following parts: 
+# recipient-transport-model-version.[ID].[Certificate-type] = [TransportModelVersion]
+# [ID] is the Id of a Recipient object
+# [Certificate-type] is the type of the certificate
+# [TransportModelVersion] is an enum constant of the type TransportModelVersion
 
 # FK7263 can only be sent to FK (legacy model version)
 recipient-transport-model-version.fk.fk7263 = LEGACY_LAKARUTLATANDE
