INTYG-1116: Fixade buggar och annat efter test mot riktig databas.

--- a/migration-tool/migration-web/src/main/resources/migration-tool.properties
+++ b/migration-tool/migration-web/src/main/resources/migration-tool.properties
@@ -12,4 +12,4 @@ infomigr.step1.reader.commit.interval=20
 infomigr.step2.reader.sql=SELECT c.ID as CERT_ID, c.SIGNED_DATE, c.DOCUMENT as CERT_JSON FROM CERTIFICATE c LEFT JOIN ORIGINAL_CERTIFICATE oc ON c.ID = oc.CERTIFICATE_ID WHERE oc.DOCUMENT LIKE '%<motivering>%' AND oc.DOCUMENT NOT LIKE '%<prognosangivelse>%' AND c.ID IN (SELECT cs1.CERTIFICATE_ID FROM CERTIFICATE_STATE cs1 LEFT JOIN CERTIFICATE_STATE cs2 ON cs1.CERTIFICATE_ID = cs2.CERTIFICATE_ID WHERE cs1.STATE = 'RECEIVED' AND cs2.STATE = 'SENT' AND TIMESTAMPDIFF(SECOND, cs1.TIMESTAMP, cs2.TIMESTAMP) > 1) AND c.ID NOT IN (SELECT cs2.CERTIFICATE_ID FROM CERTIFICATE_STATE cs2 WHERE cs2.STATE = 'CANCELLED')
 infomigr.step2.reader.commit.interval=20
 
-sendmedicalcertificate.endpoint.url=http://localhost:8080/asdf
+sendmedicalcertificate.endpoint.url=http://localhost:8080/inera-certificate/send-certificate/v1.0
