--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -194,7 +194,7 @@
     <profile>
       <id>test-server</id>
         <properties>
-          <certificate.baseUrl>http://test.minaintyg.se/inera-certificate/</certificate.baseUrl>
+          <certificate.baseUrl>http://10.250.34.20:8080/inera-certificate/</certificate.baseUrl>
         </properties>
     </profile>
     <profile>
