Fixade bugg i recipientService som tolkade id som logisk adress

--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -13,7 +13,7 @@ recipient.fk.name = Försäkringskassan
 recipient.fk.logicalAddress = FK
 # Defines the recipient TS (Transportstyrelsen)
 recipient.ts.name = Transportstyrelsen
-recipient.ts.logicalAddress = TS
+recipient.ts.logicalAddress = tsTestAddress
 
 # Lines with the prefix: recipient-transport-model-version are used to indicate which transportmodel-version a
 # certain Recipient supports for a give certificate.  
