Uppdaterat för version 1.2: Faktoriserat ut credentials. Gjort properties unika per tjänst, för att möjliggöra att flera applikationer samkör i samma container.

--- a/src/main/config/qa/certificate.properties
+++ b/src/main/config/qa/certificate.properties
@@ -1,19 +1,21 @@
-ws.key.manager.password =
-ws.certificate.file = /var/spool/tomcat/intyg/etc/qa.minaintyg.sjunet.org_cert1.p12
-ws.certificate.password =
-ws.certificate.type = PKCS12
+# Configuration folder
+config.dir = /var/spool/tomcat/intyg/etc
 
-ws.truststore.file = /var/spool/tomcat/intyg/etc/truststore-ntjp.jks
-ws.truststore.password =
-ws.truststore.type = JKS
+# NTjP SSL config
+ntjp.ws.certificate.file = ${config.dir}/qa.minaintyg.sjunet.org_cert1.p12
+ntjp.ws.certificate.type = PKCS12
 
-# Use 2021005521 for FK via WireTap, 2021005521-nowiretap for FK without WireTap, and Test for dummy consumer.
-certificatesender.address.fk7263 = Test
-revokecertificate.address.fk7263 = Test
+ntjp.ws.truststore.file = ${config.dir}/truststore-ntjp.jks
+ntjp.ws.truststore.type = JKS
 
 # Endpoints for communicating with FK (via NTjP)
 registermedicalcertificatev3.endpoint.url = https://qa.esb.ntjp.sjunet.org:20000/vp/RegisterMedicalCertificate/3/rivtabp20
 sendmedicalcertificatequestionv1.endpoint.url = https://qa.esb.ntjp.sjunet.org:20000/vp/SendMedicalCertificateQuestion/1/rivtabp20
+
+# Logical address for FK (via NTjP)
+# Use 2021005521 for FK via WireTap, 2021005521-nowiretap for FK without WireTap, and Test for dummy consumer.
+certificatesender.address.fk7263 = Test
+revokecertificate.address.fk7263 = Test
 
 # Port for talking to internal modules
 modules.port=8080
