INTYG-1212 Fixed liquibase-runner and liquibase-runner-for-certificate modules checkstyle location

--- a/tools/LiquibaseRunner/pom.xml
+++ b/tools/LiquibaseRunner/pom.xml
@@ -22,6 +22,10 @@
     </repository>
   </distributionManagement>
 
+  <properties>
+     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
+  </properties>
+
   <dependencies>
 
     <dependency>
