--- a/tools/LiquibaseRunnerForCertificate/pom.xml
+++ b/tools/LiquibaseRunnerForCertificate/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <certificate.runner.version>1.0-SNAPSHOT</certificate.runner.version>
+    <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
   </properties>
 
   <dependencies>
