INTYG-1212 Fixed liquibase-runner and liquibase-runner-for-certificate modules checkstyle location (try 2)

--- a/tools/LiquibaseRunner/pom.xml
+++ b/tools/LiquibaseRunner/pom.xml
@@ -23,7 +23,7 @@
   </distributionManagement>
 
   <properties>
-     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
+     <checkstyle.basedir>${project.basedir}/../..</checkstyle.basedir>
   </properties>
 
   <dependencies>
